--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ h1{
     }
 h5{
         margin-top: 2rem;
-        margin-bottom: 1rem;
+        margin-bottom: 3rem;
     }
     .container{
         width: 80%;
@@ -46,23 +46,34 @@ h5{
 /* audio heading*/
 .aud1{
    
-    width:28rem;
 }
+
+
+img{
+    width:10px;
+    height:10px;
+    display: none;
+    position: relative;
+    left:40px;
+    transition: opacity .35s ease;
+}
+
 /* audio hover */
-.aud1:hover{
+.aud1:hover img {
+    margin-top:0.5rem;
+    margin-bottom:0.5rem;
+    display:block;
     align-items: center;
-    width: 28rem;
+    width:1rem;
+    height:1rem;
     background-color: #99A3A4;
     opacity: 2!important;
 }
-
-.icons{
-    width: 2rem;
-    height: 2rem;
-    visibility:hidden;
-}
-.icons:hover{
-    width: 50rem;
-    height: 50rem;
-    visibility:visible;
+.aud1:hover {
+    display:inline-table;
+    align-items: center;
+    width: 28rem;
+    height:5rem;
+    background-color: #99A3A4;
+    opacity: 2!important;
 }
