--- a/annotation/src/assets/css/styles.css
+++ b/annotation/src/assets/css/styles.css
@@ -35,9 +35,36 @@
       top: 0px;
     } 
 
+
     .anno-sidebar-text{
       background-color:#f2f2f2;
-      height: 10rem;
-      width:  22rem;
+      height: auto;
+      width:  28rem;
+      overflow:auto;
+      text-align: justify;
+
+
+    }
+
+    #sidebar-container{
+      height: auto;
+      width: 300px;
+      position: absolute;
+      right: 20px;
+      background-color: #b9b9da;
+      padding: 9px;
+      margin: auto;
+      text-align: center;
+      overflow:auto;
+      font-size: 16px;
+
+    }
+
+    #anno-list{
+    margin-left: 106rem;
+    }
+
+    .annotation-text {
+    padding: 20px;
 
     }
