--- a/annotation/src/assets/css/styles.css
+++ b/annotation/src/assets/css/styles.css
@@ -80,11 +80,13 @@
       margin : 0.5%;
     }
 
-<<<<<<< HEAD
-    .annotaor-h1{
-      text-decoration: line-through !important;
-=======
-    .annotator-suggest {
+
+    .annotator-editing {
          text-decoration: line-through;
->>>>>>> fd01f09c41cb7125d77eddef54aa3a9af25613f4
+    }
+
+    .annotator-describe {
+        background: rgba(72, 243, 227, 0.3) !important;
+        text-decoration: underline;
+
     }
